--- a/build.xml
+++ b/build.xml
@@ -154,6 +154,7 @@ Args:
   				  value="${lib}/commons-logging.jar"/>
   <property name="commons.httpclient.jar"
   				value="${lib}/commons-httpclient-2.0.jar"/>
+  <property name="concurrent.jar" value="${lib}/concurrent.jar"/>
   <property name="junit.jar"      value="${test.lib}/junit.jar"/>
   <property name="junit.addons.jar" value="${test.lib}/junit-addons-1.4.jar"/>
   <property name="httpunit.jar"    value="${test.lib}/httpunit.jar"/>
@@ -200,6 +201,7 @@ Args:
     <pathelement path="${commons.collections.jar}" />
     <pathelement path="${commons.logging.jar}" />
     <pathelement path="${commons.httpclient.jar}" />
+    <pathelement path="${concurrent.jar}" />
     <pathelement path="${jetty.jar}" />
     <pathelement path="${jettytools.jar}" />
     <pathelement path="${servlet.jar}" />
