--- a/build.xml
+++ b/build.xml
@@ -1533,6 +1533,34 @@ Test results in ${tools.test.results}
    <property name="ant-contrib.loaded" value="true" />
   </target>
 
+  <target name="-load.findbugs"
+          unless="findbugs.loaded"
+          depends="-check-if-1.4,check.contrib" >
+   <taskdef name="findbugs"
+            classname="edu.umd.cs.findbugs.anttask.FindBugsTask"/>
+   <property name="findbugs.loaded" value="true" />
+   <if>
+     <isset property="env.FINDBUGS_HOME" />
+     <then>
+       <property name="findbugs.home" value="${env.FINDBUGS_HOME}" />
+     </then>
+     <else>
+       <property name="findbugs.home" value="/usr/local/findbugs" />
+     </else>
+   </if>
+  </target>
+
+  <target name="findbugs" depends="jar-lockss, -load.findbugs"
+   description="Run FindBugs on the main source tree." >
+    <findbugs home="${findbugs.home}"
+              output="emacs" >
+      <auxClasspath refid="run.classpath" />
+      <sourcePath path="${src}" />
+      <class location="${lockss.jar}" />
+    </findbugs>
+  </target>
+
+
 <!--
   <target name="check.ant-contrib.jar" unless="ant-contrib.available" >
   <taskdef resource="${ant-contrib.resource}">
