--- a/build.xml
+++ b/build.xml
@@ -494,6 +494,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
        <fileset dir="${test.src}" >
           <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
           <include name="**/*.keystore"/> <!-- test keystores -->
+	  <include name="**/*.jar"/> <!-- test jar files -->
        </fileset>
     </copy>
   </target>
