--- a/build.xml
+++ b/build.xml
@@ -342,7 +342,7 @@ Args:
     </if>
   </target>
 
-  <target name="-check-if-1.4">
+  <target name="-check-if-1.4" depends="prepare" >
     <fail unless="is-java-1.4">
 The target you have selected requires compiling under JDK 1.4.  Use the rant -1.4 option
     </fail>
