--- a/build.xml
+++ b/build.xml
@@ -242,7 +242,7 @@ Args:
   <!-- Classpath exported to production environment includes UI jar so API
   servlet can be run if jar is present. -->
   <!-- The UI jar is not actually available to any targets in this build,
-  so it doens't make sense to use this classpath for any other purpose. -->
+  so it doesn't make sense to use this classpath for any other purpose. -->
 
   <path id="prod.run.classpath">
     <path refid="test.run.classpath" />
