--- a/build.xml
+++ b/build.xml
@@ -182,6 +182,11 @@ Args:
 
   <property name="ant-contrib.jar"      value="${lib}/ant-contrib-0.6.jar"/>
 
+  <!-- jars that need to run the Oai harvester -->
+  <property name="oai-harvester.jar" value="${lib}/harvester2.jar"/>
+  <property name="log4j.jar" value="${lib}/log4j-1.2.8.jar"/>
+  <property name="xalan.jar" value="${lib}/xalan.jar"/>
+
   <!--  Files -->
   <property name="test.classpath.file" value="${test}/test-classpath"/>
   <property name="production.classpath.file" value="${lib}/run-classpath"/>
@@ -215,6 +220,10 @@ Args:
     <pathelement path="${htmlparser.jar}" />
     <pathelement path="${jena.jar}" />
     <pathelement path="${icu4j.jar}" />
+    <!-- jars need to run the Oai harvester -->
+    <pathelement path="${oai-harvester.jar}" />
+    <pathelement path="${log4j.jar}" />
+    <pathelement path="${xalan.jar}" />
   </path>
 
   <path id="run.classpath">
