--- a/build.xml
+++ b/build.xml
@@ -140,6 +140,7 @@ Args:
   <property name="castor.jar"     value="${lib}/castor-0.9.4.1-xml.jar"/>
   <property name="xerces.jar"     value="${lib}/xercesImpl.jar"/>
   <property name="xmlparser.jar"  value="${lib}/xmlParserAPIs.jar"/>
+  <property name="jimi.jar"       value="${lib}/JimiProClasses.jar"/>
 <!--  <property name="jetty.jar"     value="${lib}/org.mortbay.jetty.jar"/> -->
   <property name="jetty.jar"      value="${lib}/org.mortbay.jetty-jdk1.2.jar"/>
   <property name="jettytools.jar" value="${lib}/org.mortbay.tools.jar"/>
@@ -215,6 +216,7 @@ Args:
     <pathelement path="${castor.jar}" />
     <pathelement path="${xerces.jar}" />
     <pathelement path="${xmlparser.jar}" />
+    <pathelement path="${jimi.jar}" />
     <pathelement path="${oro.jar}" />
     <pathelement path="${htmlparser.jar}" />
     <pathelement path="${rdf.jar}" />
