--- a/build.xml
+++ b/build.xml
@@ -256,8 +256,8 @@ Args:
 
   <path id="prod.run.classpath">
     <path refid="test.run.classpath" />
-    <pathelement path="${lib}/lockss-ui.jar" />
-  </path>
+<!--    <pathelement path="${lib}/lockss-ui.jar" /> -->
+  </path> 
 
   <path id="tools.compile.classpath">
     <path refid="compile.classpath" />
