--- a/build.xml
+++ b/build.xml
@@ -162,7 +162,7 @@ Args:
   <property name="htmlparser.jar"  value="${lib}/htmlparser.jar"/>
   <property name="rdf.jar" value="${lib}/rdf-api-2001-01-19.jar" /> <!-- W3C RDF Parser -->
   <!-- Needed by OAI harvester -->
-  <!--  <property name="oai-harvester.jar" value="${lib}/harvester2.jar"/> -->
+  <property name="oai-harvester.jar" value="${lib}/harvester2-mod.jar"/>
   <property name="xalan.jar" value="${lib}/xalan.jar"/>
 
   <property name="junit.jar"      value="${test.lib}/junit.jar"/>
@@ -224,7 +224,7 @@ Args:
     <pathelement path="${htmlparser.jar}" />
     <pathelement path="${rdf.jar}" />
     <!-- jars need to run the Oai harvester -->
-    <!-- <pathelement path="${oai-harvester.jar}" /> -->
+    <pathelement path="${oai-harvester.jar}" />
     <pathelement path="${xalan.jar}" />
   </path>
 
