--- a/build.xml
+++ b/build.xml
@@ -82,6 +82,9 @@ Args:
   <property name="author" value="false" />
   <property name="version" value="false" />
 
+  <!--  Options for jikes, have no effect otherwise -->
+  <property name="build.compiler.emacs" value="true" />
+  <property name="build.compiler.warnings" value="false" />
 
   <property environment="env"/>
   <!--  Ignore system classpath, to ensure consistent builds -->
@@ -769,7 +772,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     </if>
 
     <jar destfile="${plugins.dir}/${plugin-jarfile}">
-      <fileset dir="${classes}">
+      <fileset dir="${basedir}">
 	<include name="titledb.xml" if="titledb"/>
 	<include name="${plugin-path}/*.class" />
 	<include name="${plugin-path}/*.xml" />
