--- a/build.xml
+++ b/build.xml
@@ -772,7 +772,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     </if>
 
     <jar destfile="${plugins.dir}/${plugin-jarfile}">
-      <fileset dir="${basedir}">
+      <fileset dir="${classes}">
 	<include name="titledb.xml" if="titledb"/>
 	<include name="${plugin-path}/*.class" />
 	<include name="${plugin-path}/*.xml" />
