--- a/build.xml
+++ b/build.xml
@@ -254,14 +254,10 @@ Args:
     <pathelement path="${lockss.ant.jar}" />
   </path>
 
-  <!-- Classpath exported to production environment includes UI jar so API
-  servlet can be run if jar is present. -->
-  <!-- The UI jar is not actually available to any targets in this build,
-  so it doesn't make sense to use this classpath for any other purpose. -->
-
+  <!-- Classpath exported to production environment. -->
   <path id="prod.run.classpath">
-    <path refid="test.run.classpath" />
-<!--    <pathelement path="${lib}/lockss-ui.jar" /> -->
+<!--     <path refid="test.run.classpath" /> -->
+    <path refid="run.classpath" />
   </path> 
 
   <path id="tools.compile.classpath">
