--- a/build.xml
+++ b/build.xml
@@ -463,6 +463,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     <delete dir="${classes}" quiet="true"/>
     <delete dir="${test.classes}" quiet="true"/>
     <delete dir="${plugins.classes}" quiet="true"/>
+    <delete dir="${plugins.test.classes}" quiet="true"/>
     <delete dir="${ant.classes}" quiet="true"/>
     <delete dir="${depend.cache}" quiet="true"/>
     <delete dir="${test.results}" quiet="true"/>
