--- a/build.xml
+++ b/build.xml
@@ -894,7 +894,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
 ULIMIT_MEMORY=128000
 ULIMIT_STACK=14000
 ULIMIT_FILES=256
-JAVA_COMMAND_ARGS=-Xmx120m -Dsun.net.inetaddr.ttl=3600 -showversion
+JAVA_COMMAND_ARGS="-Xmx120m -Dsun.net.inetaddr.ttl=3600 -showversion"
 </echo>
     <!-- Write packing list file-->
     <pathconvert refid="prod.packing.list" property="tmp.packing.list"
