--- a/test/frameworks/run_stf/testsuite.props
+++ b/test/frameworks/run_stf/testsuite.props
@@ -10,7 +10,7 @@
 # daemonCount = 4
 
 ## Log level for the daemon
-# daemonLogLevel = debug3
+daemonLogLevel = debug2
 
 ## Log level for the script
 # scriptLogLevel = info
@@ -33,7 +33,7 @@
 # deleteAfterSuccess = True
 
 ## Delay shutdown until you hit the 'Enter' key to continue
-# delayShutdown = False
+delayShutdown = true
 
 ## Hostname
 # hostname = localhost
@@ -50,3 +50,5 @@
 ##
 
 #org.lockss.daemon.foo = bar
+
+org.lockss.crawler.repair.expiration=20m
