--- a/build.xml
+++ b/build.xml
@@ -312,6 +312,7 @@ Args:
   </path>
 
   <path id="one.test.run.classpath" >
+    <path refid="tools.test.run.classpath" />
     <pathelement path="${lockss.plugins.jar}"/>
     <pathelement path="${lockss.plugins.test.jar}"/>
     <pathelement path="${lockss.tools.jar}"/>
