--- a/build.xml
+++ b/build.xml
@@ -897,10 +897,10 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     </pathconvert>
     <echo message="${tmp.run.clspth}" file="${production.classpath.file}"/>
     <!-- Write run-props -->
-    <echo file="${run.props}">ULIMIT_DATA=192000
-ULIMIT_MEMORY=128000
+    <echo file="${run.props}">ULIMIT_DATA=256000
+ULIMIT_MEMORY=unlimited
 ULIMIT_STACK=14000
-ULIMIT_FILES=256
+ULIMIT_FILES=512
 JAVA_COMMAND_ARGS="-Xmx120m -Dsun.net.inetaddr.ttl=3600 -showversion"
 </echo>
     <!-- Write packing list file-->
