--- a/build.xml
+++ b/build.xml
@@ -161,9 +161,7 @@ Args:
   <property name="xerces.jar"     value="${lib}/xercesImpl.jar"/>
   <property name="xmlparser.jar"  value="${lib}/xmlParserAPIs.jar"/>
   <property name="jimi.jar"       value="${lib}/JimiProClasses.jar"/>
-<!--  <property name="jetty.jar"     value="${lib}/org.mortbay.jetty.jar"/> -->
-  <property name="jetty.jar"      value="${lib}/org.mortbay.jetty-jdk1.2.jar"/>
-  <property name="jettytools.jar" value="${lib}/org.mortbay.tools.jar"/>
+  <property name="jetty.jar"      value="${lib}/jetty-5.1.5.jar"/>
   <property name="servlet.jar"    value="${lib}/javax.servlet.jar"/>
   <property name="jaxp.jar"       value="${lib}/javax.xml.jaxp.jar"/>
 <!--    <property name="xml.jar"  value="${lib}/org.apache.crimson.jar"/> -->
@@ -251,7 +249,6 @@ Args:
     <pathelement path="${log4j.jar}" />
     <pathelement path="${concurrent.jar}" />
     <pathelement path="${jetty.jar}" />
-    <pathelement path="${jettytools.jar}" />
     <pathelement path="${servlet.jar}" />
     <pathelement path="${castor.jar}" />
     <pathelement path="${xerces.jar}" />
@@ -625,7 +622,8 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
     </dojavac>
     <copy todir="${test.classes}" >
        <fileset dir="${test.src}" >
-          <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
+          <include name="**/*.xml"/>   <!-- mapping files and test files -->
+          <include name="**/*.txt"/>   <!-- test files -->
           <include name="**/*.keystore"/> <!-- test keystores -->
 	  <include name="**/*.jar"/> <!-- test jar files -->
        </fileset>
