--- a/build.xml
+++ b/build.xml
@@ -906,7 +906,23 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
   </target>
 
   <!-- ==================================================================== -->
-  <target name="package" depends="jar-lockss"
+  <target name="check-libs" depends="check.contrib"
+   description="Check that all the jars on the production classpath exist" >
+    <for param="file">
+     <path refid="run.classpath" />
+     <sequential>
+      <if>
+       <available file="@{file}" />
+       <else>
+	<fail message="@{file} not found" />
+       </else>
+      </if>
+     </sequential>
+    </for>
+  </target>
+
+  <!-- ==================================================================== -->
+  <target name="package" depends="jar-lockss,check-libs"
    description="Produce all files for a production package" >
     <!-- Write run classpath file -->
     <pathconvert refid="prod.run.classpath" property="tmp.run.clspth"
