--- a/build.xml
+++ b/build.xml
@@ -56,6 +56,7 @@ Args:
   -Dloglevel=debug         Set default log level to debug for
                              test-all, test-one, test-class, run-class.
   -Dlogtarget=Class        Set default log target.
+  -Dnonetwork=true         Skip tests that require a working network
   -Dnowarn=true            Turn off compiler warnings.
   -Dshowoutput=yes         With test-one, show System.err output as it happens.
   -Dtimeout=msecs          Override the default test failure timeout.
@@ -85,6 +86,7 @@ Args:
   <property name="filtertrace" value="yes" />
   <property name="timeout" value="" />
   <property name="keeptempfiles" value="" />
+  <property name="nonetwork" value="" />
 <!-- Some tests will not work right if fork=no  -->
   <property name="fork" value="yes" />
   <property name="forkc" value="yes" />
@@ -425,6 +427,8 @@ Test results in ${test.results}
       <sysproperty key="org.lockss.defaultLogTarget" value="${logtarget}"/>
       <sysproperty key="org.lockss.keepTempFiles" value="${keeptempfiles}"/>
       <sysproperty key="org.lockss.test.timeout.shouldnt" value="${timeout}"/>
+      <sysproperty key="org.lockss.test.skipNetworkTests" value="${nonetwork}"/>
+
 <!--       <sysproperty key="jaxp.debug" value="1"/> -->
 
     </junit1>
