--- a/build.xml
+++ b/build.xml
@@ -1685,6 +1685,7 @@ Test results in ${test.results}
 	   target="test-all"
 	   inheritAll="false">
        <property name="ant-contrib.loaded" value="${ant-contrib.loaded}" />
+       <property name="halt" value="${halt}" />
      </ant>
      <echo>Build was successful, deleting "${temp.build.dir}"</echo>
      <delete dir="${temp.build.dir}" quiet="true"/>
