--- a/build.xml
+++ b/build.xml
@@ -181,7 +181,7 @@ Args:
   <property name="commons.codec.jar"
   				  value="${lib}/commons-codec-1.3.jar"/>
   <property name="commons.httpclient.jar"
-  			value="${lib}/commons-httpclient-3.0-nightly.jar"/>
+  			value="${lib}/commons-httpclient-3.0-rc4.jar"/>
   <property name="commons.jxpath.jar"
   				value="${lib}/commons-jxpath-1.2.jar"/>
   <property name="concurrent.jar" value="${lib}/concurrent.jar"/>
