--- a/build.xml
+++ b/build.xml
@@ -190,7 +190,7 @@ Args:
 	<property name="xstream.jar" value="${lib}/xstream-1.1.2.jar" />
 	<property name="xmlunit.jar" value="${lib}/xmlunit1.0.jar" />
   <!-- Needed by OAI harvester -->
-  <property name="oai-harvester.jar" value="${lib}/harvester2-0.1.5.jar"/>
+  <property name="oai-harvester.jar" value="${lib}/harvester2-0.1.6L1.jar"/>
 
   <property name="junit.jar"      value="${test.lib}/junit.jar"/>
   <property name="junit.addons.jar" value="${test.lib}/junit-addons-1.4.jar"/>
