--- a/build.xml
+++ b/build.xml
@@ -889,7 +889,7 @@ The target you have selected requires compiling under JDK 1.4.  Use the rant -1.
        <include name="**/" />
     </jar>
     <!-- Write test classpath to a file, so test scripts can get it -->
-    <pathconvert refid="test.run.classpath" property="tmp.test.clspth"
+    <pathconvert refid="tools.test.run.classpath" property="tmp.test.clspth"
       targetos="${detected.os}" />
     <echo message="${tmp.test.clspth}" file="${test.classpath.file}"/>
   </target>
