--- a/build.xml
+++ b/build.xml
@@ -1709,7 +1709,7 @@ Test results in ${test.results}
 	   inheritAll="false">
        <property name="ant-contrib.loaded" value="${ant-contrib.loaded}" />
        <property name="halt" value="${halt}" />
-       <property name="build.compiler" value="${build.compiler}" />
+<!--       <property name="build.compiler" value="${build.compiler}" /> -->
      </ant>
      <echo>Build was successful, deleting "${temp.build.dir}"</echo>
      <delete dir="${temp.build.dir}" quiet="true"/>
