--- a/build.xml
+++ b/build.xml
@@ -1690,10 +1690,17 @@ Test results in ${test.results}
                failonerror="true"/>
          </then>
          <else>
-          <echo message="CVSROOT=${cvs.root}"/>
-	  <cvs command="-z3 -d ${cvs.root} -Q checkout"
+          <!-- Eclipse creates CVS/Root files with :extssh: as the access
+               method.  Turn these into :ssh:  -->
+	  <propertyregex property="cvs.root1"
+	     input="${cvs.root}"
+	     regexp="^(:ext)ssh(:.*)$"
+	     replace="\1\2"
+             defaultValue="${cvs.root}" />
+          <echo message="CVSROOT=${cvs.root1}"/>
+          <cvs command="-z3 -d ${cvs.root1} -Q checkout"
                package="${cvs.module}"
-	       dest="${temp.build.dir}"
+               dest="${temp.build.dir}"
                tag="${cvs.co.tag}"
                failonerror="true"/>
          </else>
