--- a/build.xml
+++ b/build.xml
@@ -210,6 +210,7 @@ Args:
   <property name="oro.jar"  value="${test.lib}/jakarta-oro-2.0.8.jar"/>
   <property name="getopt.jar"  value="${test.lib}/java-getopt-1.0.9.jar"/>
   <property name="ant-contrib.jar"      value="${lib}/ant-contrib-0.6.jar"/>
+  <property name="pdfbox.jar" value="${lib}/PDFBox-0.7.2.jar" />
 
   <!-- Jars we create -->
   <property name="lockss.jar"     value="${lib}/lockss.jar"/>
