--- a/build.xml
+++ b/build.xml
@@ -1144,7 +1144,12 @@ java -classpath &quot;${tmp.ptool.clspth.unix}&quot; org.lockss.devtools.plugind
              header="${javadoc.header}"
              bottom="Copyright &amp;copy; 2000-2006 Board of Trustees of Leland Stanford Jr. University, all rights reserved.">
        <classpath refid="compile.classpath" />
+       <link href="${ext.javadoc}/commons-collections-3.2/docs/apidocs" />
+       <link href="${ext.javadoc}/commons-httpclient-2.0.2/docs/apidocs" />
+       <link href="${ext.javadoc}/commons-lang-2.1/docs/api" />
+       <link href="${ext.javadoc}/commons-logging-1.1/docs/apidocs" />
        <link href="${ext.javadoc}/htmlparser-1.6/docs/javadoc" />
+       <link href="${ext.javadoc}/xstream-1.1.3/javadoc" />
     </javadoc>
   </target>
 
